--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,3 +15,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+.login-cards {
+  width: 200px
+}
