--- a/files/styles.css
+++ b/files/styles.css
@@ -15,3 +15,16 @@ body {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+/*Inheritance*/
+/*All jumbotrons will 
+have a background size like that*/
+.JumboHeaderHome {
+  background-size: cover;
+}
+
+/*Home Page Jumbotron Image*/
+.JumboHeaderHome {
+  background-image: url(images/bannerA.jpg);
+}
+
