--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 		<a class="navbar-brand" href="#">REPLACE_PROJECT_NAME</a>
 		<form class="form-inline">
 			<!-- TODO: ADD DYNAMIC CODE FOR LOGIN-->
-			<a class="btn btn-outline-info my-2 my-sm-0" href="/login">Login</a>
+			<a class="btn btn-outline-info my-2 my-sm-0" href="/login">Login / Register</a>
 		</form>
 	</nav>
 	<div id="main">
