--- a/templates/login.html
+++ b/templates/login.html
@@ -2,14 +2,70 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="container">
-	<div class="row row-cols-2 justify-content-between align-items-center">
+
+<div class="container padded-top">
+	{% if type == 'user' %}
+	<div class="row align-items-center">
 		<div class="col">
-			<img class="img-fluid rounded login-cards float-left" src="{{ url_for('static', filename='user.png') }}" />
-		</div>
-		<div class="col">
-			<img class="img-fluid rounded login-cards float-right" src="{{ url_for('static', filename='org.png') }}" />
+			<p class="text-center display-4">User Login</p>
+			<hr />
 		</div>
 	</div>
+	<div class="row justify-content-center align-items-center">
+		<!-- TODO: Actual Form -->
+		<form>
+			<div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+			</div>
+			<div class="form-group">
+				<label for="exampleInputPassword1">Password</label>
+				<input type="password" class="form-control" id="exampleInputPassword1">
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</form>
+	</div>
+	{% elif type == 'org' %}
+	<div class="row align-items-center">
+		<div class="col">
+			<p class="text-center display-4">Organization Login</p>
+			<hr />
+		</div>
+	</div>
+	<div class="row justify-content-center align-items-center">
+		<!-- TODO: Actual Form -->
+		<form>
+			<div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+			</div>
+			<div class="form-group">
+				<label for="exampleInputPassword1">Password</label>
+				<input type="password" class="form-control" id="exampleInputPassword1">
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</form>
+	</div>
+	{% else %}
+	<div class="row align-items-center">
+		<div class="col">
+			<p class="text-center display-4">Choose your Account Type</p>
+			<hr />
+		</div>
+	</div>
+	<div class="row justify-content-center align-items-center">
+		<div class="col-4">
+			<a href="/login?type=user"><img class="img-fluid rounded mx-auto d-block login-cards"
+					src="{{ url_for('static', filename='user.png') }}" /></a>
+		</div>
+		<div class="col-4">
+			<a href="/login?type=org"><img class="img-fluid rounded mx-auto d-block login-cards"
+					src="{{ url_for('static', filename='org.png') }}" /></a>
+		</div>
+	</div>
+	{% endif %}
 </div>
+
 {% endblock %}
