--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,6 +7,7 @@ html {
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -25,7 +26,7 @@ have a background size like that*/
 
 /*Home Page Jumbotron Image*/
 .JumboHeaderHome {
-  background-image: url(images/bannerA.jpg);
+  background-image: url(/assets/jumbotronHome.jpg);
 }
 
 .login-cards {
