Fixed base login/register buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
 		<a class="navbar-brand" href="#">REPLACE_PROJECT_NAME</a>
 		<form class="form-inline">
 			<!-- TODO: ADD DYNAMIC CODE FOR LOGIN-->
-			<a class="btn btn-outline-info my-2 my-sm-0" href="/login">Login</a>
-			<a class="btn btn-outline-info my-2 my-sm-0" href="/register">Register</a>
+			<a class="btn btn-outline-info my-2 my-sm-0 mr-1" href="/login">Login</a>
+			<a class="btn btn-outline-info my-2 my-sm-0 ml-1" href="/register">Register</a>
 		</form>
 	</nav>
 	<div id="main">
