Added addItem.html. TODO: Fix the specify other category option.

--- a/templates/register.html
+++ b/templates/register.html
@@ -234,7 +234,7 @@
 					<div class="form-check">
 						<input class="form-check-input" type="checkbox" id="gridCheck" required>
 						<label class="form-check-label" for="gridCheck">
-						I have read and understood the <a href data-target="#termsconditions" data-toggle="modal">terms and conditions</a>.
+						I have read and understood the <a href data-target="#termsconditions" data-toggle="modal">terms and conditions</a>
 						</label>
 					</div>
 				</div>
@@ -243,7 +243,7 @@
 					<div class="modal-dialog" role="document">
 					<div class="modal-content">
 						<div class="modal-header">
-						<h5 class="modal-title" id="termsconditions">Terms and Conditions</h5>
+						<h5 class="modal-title" id="termsconditions">Terms and Conditions</h5>.
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
