Please fix form background and jquery.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -31,7 +31,7 @@ have a background size like that*/
 
 /*Form Background*/
 .FormBackground {
-  background-image: url('backgroundRegistration.jpg');
+  background-image: url('FormBackground2.jpg');
 
   /* Full height */
   height: 100%;
