--- a/templates/items.html
+++ b/templates/items.html
@@ -4,7 +4,33 @@
 {% block content %}
 
 <div class="container padded-top">
-	
+	<div class="row align-items-center">
+		<div class="col">
+			<p class="text-center display-4">Donated Items</p>
+			<hr />
+		</div>
+	</div>
+	<div class="row">
+		<div class="col table-responsive">
+			<!-- TODO: FINISH THIS TABLE -->
+			<table class="table table-bordered table-hover">
+				<thead class="thead-dark">
+					<tr>
+						<th scope="col">#</th>
+						<th scope="col">Org. Name</th>
+						<th scope="col">License No.</th>
+						<th scope="col">City</th>
+						<th scope="col">PO. Box</th>
+						<th scope="col">Email</th>
+						<th scope="col">Phone No.</th>
+						<th scope="col">Request Date</th>
+						<th scope="col">View Info</th>
+						<th scope="col">Approve?</th>
+					</tr>
+				</thead>
+			</table>
+		</div>
+	</div>
 </div>
 
 {% endblock %}
