--- a/templates/items.html
+++ b/templates/items.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container padded-top">
+<div class="container pt-5">
 	<div class="row align-items-center">
 		<div class="col">
 			<p class="text-center display-4">Donated Items</p>
