--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container padded-top">
+<div class="container pt-5">
 	<div class="row align-items-center justify-content-center">
 		<div class="col m-2">
 			<p class="display-4 mx-auto text-center">Organization Access Requests</p>
