--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>{% block title %}{% endblock %} - REPLACE_PROJECT_NAME</title>
+	<title>{% block title %}{% endblock %} - Donation Nation</title>
 
 	<!-- * Bootstrap * -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -23,11 +23,11 @@
 <body>
 	<!--TODO: NAVBAR-->
 	<nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#">REPLACE_PROJECT_NAME</a>
+		<a class="navbar-brand" href="/">Donation Nation</a>
 		<form class="form-inline">
 			<!-- TODO: ADD DYNAMIC CODE FOR LOGIN-->
-			<a class="btn btn-outline-info my-2 my-sm-0 mr-1" href="/login">Login</a>
-			<a class="btn btn-outline-info my-2 my-sm-0 ml-1" href="/register">Register</a>
+			<a class="btn btn-info my-2 my-sm-0 mr-1" href="/login">Login</a>
+			<a class="btn btn-secondary my-2 my-sm-0 ml-1" href="/register">Register</a>
 		</form>
 	</nav>
 	<div id="main">
