Updates. Just alot.

--- a/templates/main.html
+++ b/templates/main.html
@@ -38,7 +38,7 @@
 	</div>
 
 	<!--Last thing-->
-	<div class="container p-3">
+	<div class="container p-3 mb-5">
 		<h1>Register Now!</h1>
 		<hr />
 		<div class="row">
