--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<div class="container pt-5">
+<div class="container pt-5" id="registration">
 	{% if type == 'user' %}
 	<div class="row align-items-center">
 		<div class="col">
