--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,7 +14,6 @@ body {
 }
 
 .footer {
-  position: absolute;
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
@@ -61,4 +60,8 @@ have a background size like that*/
 
 .card-title {
   font-weight: bolder;
+}
+
+#registration {
+  margin-bottom: 10rem!important
 }
