--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
 	<div id="main">
 		{% block content %}{% endblock %}
 	</div>
-	<footer class="footer">
+	<footer class="footer fixed-bottom">
 		<div class="container">
 			<span class="text-muted">
 				<!--TODO: Create footer-->
