--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -13,9 +13,9 @@
 	<div class="row align-items-center justify-content-center">
 		<div class="card-deck padded-top">
 			<div class="card border-dark mb-3 text-center org-cards">
-				<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Flag_of_the_Red_Cross.png/1200px-Flag_of_the_Red_Cross.png">
+				<img class="card-img-top" src="https://cdn.expatwoman.com/s3fs-public/styles/full_width_870/public/galleries/636083466698321145.jpg?itok=phomnWiv">
 				<div class="card-body">
-					<h5 class="card-title">Red Cross</h5>
+					<h5 class="card-title">Dar El Ber</h5>
 					<a class="btn btn-success" href="#">View Profile</a>
 				</div>
 				<div class="card-footer">
