--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container padded-top">
+<div class="container pt-5">
 	{% if type == 'user' %}
 	<div class="row align-items-center">
 		<div class="col">
