--- a/templates/main.html
+++ b/templates/main.html
@@ -46,7 +46,7 @@
 			<div class="col-sm text-center">
 				<h2 align="center">Are you a user wishing to use our organization?</h2>
 				<div class="p-3">
-					<button type="button" class="btn btn-primary btn-lg">Register as User</button>
+					<a class="btn btn-primary btn-lg" href="/register?type=user">Register as User</a>
 				</div>
 			</div>
 
@@ -54,7 +54,7 @@
 			<div class="col-sm text-center">
 				<h2 align="center">Are you an organization wishing to use our platform?</h2>
 				<div class="p-3">
-					<button type="button" class="btn btn-primary btn-lg">Register as Organization</button>
+					<a class="btn btn-primary btn-lg" href="/register?type=org">Register as Organization</a>
 				</div>
 			</div>
 		</div>
