--- a/templates/base.html
+++ b/templates/base.html
@@ -33,13 +33,11 @@
 	<div id="main">
 		{% block content %}{% endblock %}
 	</div>
-	<footer class="footer fixed-bottom">
-		<div class="container">
-			<span class="text-muted">
-				<!--TODO: Create footer-->
-			</span>
-		</div>
-	</footer>
+	<div class="fluid-container footer">
+		<span class="text-muted">
+			<!--TODO: Create footer-->
+		</span>
+	</div>
 </body>
 
 </html>
