--- a/templates/addItem.html
+++ b/templates/addItem.html
@@ -133,6 +133,7 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
+        <div style="height: 100px"></div>
     </div>
 </div>
 
