Finished list items page

--- a/templates/items.html
+++ b/templates/items.html
@@ -17,17 +17,54 @@
 				<thead class="thead-dark">
 					<tr>
 						<th scope="col">#</th>
-						<th scope="col">Org. Name</th>
-						<th scope="col">License No.</th>
-						<th scope="col">City</th>
-						<th scope="col">PO. Box</th>
-						<th scope="col">Email</th>
-						<th scope="col">Phone No.</th>
-						<th scope="col">Request Date</th>
-						<th scope="col">View Info</th>
-						<th scope="col">Approve?</th>
+						<th scope="col">Donation ID</th>
+						<th scope="col">Item Name</th>
+						<th scope="col">Category</th>
+						<th scope="col">Condition</th>
+						<th scope="col">Description</th>
+						<th scope="col">Image</th>
+						<th scope="col">Receiving Organization</th>
+						<th scope="col">Status</th>
+						<th scope="col">Pickup Time</th>
 					</tr>
 				</thead>
+				<tbody>
+					<th scope="row">1</th>
+					<td>aaaa-bbb-ccc-dddd</td>
+					<td>Used Hoodies</td>
+					<td>Clothes</td>
+					<td>Lightly Used</td>
+					<td>A used red hoodie that is really good at keeping the wearer warm. It has a few loose strings on
+						the inside but other than that it is in perfect condition.</td>
+					<td><a href="#">View</a></td>
+					<td>Red Crescent</td>
+					<td><span class="badge badge-success">Accepted</span></td>
+					<td>10/11/2020 - 10:30 AM</td>
+				</tbody>
+				<tbody>
+					<th scope="row">1</th>
+					<td>aaaa-bbb-ccc-dddd</td>
+					<td>Used Pillow Cases</td>
+					<td>Linens</td>
+					<td>New</td>
+					<td>It's pretty cool.</td>
+					<td><a href="#">View</a></td>
+					<td>Red Crescent</td>
+					<td><span class="badge badge-danger">Rejected</span></td>
+					<td>11/11/2020 - 5:30 AM</td>
+				</tbody>
+				<tbody>
+					<th scope="row">1</th>
+					<td>aaaa-bbb-ccc-dddd</td>
+					<td>Used Hotwheels Track</td>
+					<td>Toys</td>
+					<td>Lightly Used</td>
+					<td>The name of the item is self explanatory.</td>
+					<td><a href="#">View</a></td>
+					<td>Red Crescent</td>
+					<td><span class="badge badge-warning">Needs Approval</span></td>
+					<td>1/1/2020 - 2:30 PM</td>
+				</tbody>
 			</table>
 		</div>
 	</div>
